--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -80,7 +80,7 @@ body {
 .app-container {
   min-height: 100vh;
   border-radius: 4px;
-  border: 2px solid rgb(255, 255, 255, 0.1);
+  border: 2px solid rgba(55, 225, 255, 0.2);
   margin: var(--app-container-margin);
   width: 940px;
   background-image: repeating-linear-gradient(-45deg,
