--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -1,6 +1,7 @@
 #header {
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.4);
+  width:var(--header-width);
   max-width: var(--header-max-width);
   border-radius: var(--border-radius-one);
 }
