--- a/src/global/components/footer/footer.module.css
+++ b/src/global/components/footer/footer.module.css
@@ -1,13 +1,13 @@
 #footer {
   display: flex;
+  width: 95%;
+  height: 50px;
   font-size: 14px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   text-align: center;
-  width: 880px;
-  height: 50px;
   color: rgba(255, 255, 255, 0.7);
   /*border: 1px solid white;*/
 }
