--- a/src/global/components/modal/modal.module.css
+++ b/src/global/components/modal/modal.module.css
@@ -1,3 +1,13 @@
+@media screen and (max-width:600px){
+  .card{
+    margin:0 auto!important;
+  }
+  .card:after {
+      bottom: 0px!important;
+      height: 0px!important;
+  }
+}
+
 .modal {
   position: fixed;
   z-index: 10;
@@ -18,11 +28,13 @@
   border-radius: 5px;
   height: fit-content;
   margin: 50px auto;
+  width:100%;
   max-width: 600px;
   background-color: white;
   color: black;
 }
 
+/* space between the card and the bottom of the page */
 .card:after {
   position: absolute;
   content: "";
@@ -32,37 +44,39 @@
 }
 
 .card .header {
-  padding: 10px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  width: auto;
-  height: 60px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 70px;
+  margin:0 0 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .card .header .title {
-  flex: 1;
-  padding-left: 10px;
+  width:85%;
   height: 40px;
   font-size: 25px;
+  text-transform: capitalize;
 }
 
 .card .header .close_btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 35px;
+  width: 5%;
   height: 40px;
   font-size: 25px;
   cursor: pointer;
-  /*border: 1px solid black;*/
 }
 
 .card .content {
-  padding: 10px;
-  margin-top: 20px;
+  margin: 0 auto;
+  width:90%;
 }
 
 .content img {
-  width: 100%;
+  width:100%;
+  margin:0 0 20px 0;
 }
+
