--- a/src/pages/projects/layouts/pinned.module.css
+++ b/src/pages/projects/layouts/pinned.module.css
@@ -90,10 +90,8 @@
   margin: 0 auto;
   overflow: hidden;
   width: 100%;
-  height: 390px;
-  border-radius: 2px;
+  height: fit-content;
   transition: 400ms;
-  /*box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;*/
 }
 
 .image_wrapper:hover {
