--- a/src/global/components/modal/modal.module.css
+++ b/src/global/components/modal/modal.module.css
@@ -1,10 +1,12 @@
-@media screen and (max-width:600px){
-  .card{
-    margin:0 auto!important;
+@media screen and (max-width:600px) {
+  .card {
+    margin: 0 auto !important;
+    border-radius: 0 !important;
   }
+
   .card:after {
-      bottom: 0px!important;
-      height: 0px!important;
+    bottom: 0px !important;
+    height: 0px !important;
   }
 }
 
@@ -28,7 +30,7 @@
   border-radius: 5px;
   height: fit-content;
   margin: 50px auto;
-  width:100%;
+  width: 100%;
   max-width: 600px;
   background-color: white;
   color: black;
@@ -49,12 +51,12 @@
   align-items: center;
   width: 100%;
   height: 70px;
-  margin:0 0 30px;
+  margin: 0 0 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .card .header .title {
-  width:85%;
+  width: 85%;
   height: 40px;
   font-size: 25px;
   text-transform: capitalize;
@@ -72,11 +74,10 @@
 
 .card .content {
   margin: 0 auto;
-  width:90%;
+  width: 90%;
 }
 
 .content img {
-  width:100%;
-  margin:0 0 20px 0;
+  width: 100%;
+  margin: 0 0 20px 0;
 }
-
