--- a/src/pages/stats/components/SO/children/topTech.module.css
+++ b/src/pages/stats/components/SO/children/topTech.module.css
@@ -2,7 +2,7 @@
   font-family: 'Barlow Semi Condensed', sans-serif;
   height: 252px;
   flex: 1;
-  margin: 10px 0 0 5px;
+  margin: 12px 10px 0 10px;
   padding: 25px 30px 35px 30px;
   border-radius: 5px;
   border: 1px solid rgba(255, 255, 255, 0.1);
