changes to the position of the image in the home header

--- a/src/pages/home/components/header.module.css
+++ b/src/pages/home/components/header.module.css
@@ -2,6 +2,10 @@
   .movable_box {
     display: none !important;
   }
+
+  .wrapper {
+    background-position: left !important;
+  }
 }
 
 #header {
