--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -14,15 +14,22 @@
 
 .wrapper {
   position: relative;
-  z-index: 0;
+  z-index: 1;
   height: var(--header-height);
   max-width: var(--header-max-width);
-  background-position: center;
-  background-size: cover;
-  overflow-x: hidden;
+  overflow: hidden;
   border-radius: var(--border-radius-one);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: inset -4px 4px 12px rgb(0, 0, 0, 1);
+}
+
+.wrapper img{
+  position:absolute;
+  top:0;
+  bottom:0;
+  margin: auto;
+  z-index:0;
+  width:100%;
 }
 
 .glass {
