--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -1,7 +1,7 @@
 #header {
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.4);
-  width:var(--header-width);
+  width: var(--header-width);
   max-width: var(--header-max-width);
   border-radius: var(--border-radius-one);
 }
@@ -11,7 +11,6 @@
   z-index: 0;
   height: var(--header-height);
   max-width: var(--header-max-width);
-  background-image: url("../../../global/assets/images/CP_projects.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
@@ -25,21 +24,16 @@
   justify-content: flex-end;
   border-right: 1px solid white;
   overflow-x: hidden;
-  border-image: linear-gradient(
-      to bottom,
+  border-image: linear-gradient(to bottom,
       rgb(255, 255, 255, 0.02),
-      rgba(0, 0, 0, 0.9)
-    )
-    1 100%;
+      rgba(0, 0, 0, 0.9)) 1 100%;
   position: relative;
   z-index: 1;
   position: relative;
-  background: linear-gradient(
-    8deg,
-    rgba(255, 255, 255, 0) 20%,
-    rgba(255, 255, 255, 0.05) 50%,
-    rgba(255, 255, 255, 0.18) 80%
-  );
+  background: linear-gradient(8deg,
+      rgba(255, 255, 255, 0) 20%,
+      rgba(255, 255, 255, 0.05) 50%,
+      rgba(255, 255, 255, 0.18) 80%);
   width: calc(100%-1px);
   height: 100%;
 }
