--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -1,4 +1,5 @@
 #header {
+  position: relative;
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.4);
   width: var(--header-width);
@@ -6,9 +7,33 @@
   border-radius: var(--border-radius-one);
 }
 
+.skeleton_loader {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto auto;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  background: transparent;
+  background: linear-gradient(100deg, transparent 8%, rgba(255, 255, 255, 0.05) 16%, transparent 24%);
+  border-radius: 5px;
+  background-size: 200% 100%;
+  animation: 1.5s shine linear infinite;
+}
+
+@keyframes shine {
+  to {
+    background-position-x: -200%;
+  }
+}
+
+
 .wrapper {
   position: relative;
-  z-index: 0;
+  z-index: 1;
   height: var(--header-height);
   max-width: var(--header-max-width);
   background-position: center;
