--- a/src/pages/home/components/header.module.css
+++ b/src/pages/home/components/header.module.css
@@ -18,9 +18,10 @@
 
 .wrapper {
   position: relative;
-  z-index: 0;
+  z-index: 1; /* the loading effect is in z-index: 0 */
   height: var(--header-height);
   max-width: var(--header-max-width);
+  background-image: url("../../../global/assets/images/CP_home.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
