--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -1,5 +1,4 @@
 #header {
-  position: relative;
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.4);
   width: var(--header-width);
@@ -7,35 +6,12 @@
   border-radius: var(--border-radius-one);
 }
 
-.skeleton_loader {
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto auto;
-  width: calc(100% - 2px);
-  height: calc(100% - 2px);
-  background: transparent;
-  background: linear-gradient(100deg, transparent 8%, rgba(255, 255, 255, 0.05) 16%, transparent 24%);
-  border-radius: 5px;
-  background-size: 200% 100%;
-  animation: 1.5s shine linear infinite;
-}
-
-@keyframes shine {
-  to {
-    background-position-x: -200%;
-  }
-}
-
-
 .wrapper {
   position: relative;
-  z-index: 1;
+  z-index: 1; /* the loading effect is in z-index: 0 */
   height: var(--header-height);
   max-width: var(--header-max-width);
+  background-image: url("../../../global/assets/images/CP_projects.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
