--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -14,9 +14,10 @@
 
 .wrapper {
   position: relative;
-  z-index: 0;
+  z-index: 1; /* the loading effect components uses z-index: 0 */
   height: var(--header-height);
   max-width: var(--header-max-width);
+  background-image: url("../../../global/assets/images/CP_writings.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
