--- a/src/global/assets/backgrounds.css
+++ b/src/global/assets/backgrounds.css
@@ -17,3 +17,14 @@
   background-attachment: fixed;
   background-size: cover;
   */
+/*
+  background-color: #21194A;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%232b245a' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%2335306a' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%233e3b7a' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%2348478a' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2352529A' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;*/
+/*
+  background-color: #291f5d;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%232c286a' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%2334367a' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%233b438a' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%2343519a' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%234A5FAA' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  */
