--- a/src/global/components/display/components/social.module.css
+++ b/src/global/components/display/components/social.module.css
@@ -13,7 +13,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   border-left: 1px solid rgba(255, 255, 255, 0.07);
 
-  background-color: rgb(40, 53, 97);
+  background-color: #384773;
   /*
   background: linear-gradient(0deg,
       var(--dark-transparent-one) 50%,
