--- a/src/pages/home/components/filterByEvent.module.css
+++ b/src/pages/home/components/filterByEvent.module.css
@@ -14,20 +14,21 @@
   padding: 12px 0px 12px 0px;
   text-align: center;
   align-items: center;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.5);
   font-weight: 500;
   font-size: 14px;
   border-radius: var(--border-radius-two);
   background-color: var(--wrapper-bg-color);
   border: var(--wrapper-border);
   box-shadow: var(--wrapper-inner-shadow);
-  transition: 300ms;
+  transition: 200ms;
   cursor: pointer;
   text-transform: uppercase;
 }
 
 #filterByEvent>div:hover {
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgb(43, 58, 102) !important;
 }
 
 .icon {
@@ -37,7 +38,7 @@
 
 .selected {
   color: var(--selected-font-color) !important;
-  animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate !important;
 }
 
 @keyframes glow {
