--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -3,6 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
+
+
 :root {
   /* app margins */
   --app-container-margin: 40px auto;
@@ -71,8 +73,34 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* ---- Scrollbar Styles ----------------------------- */
+html {
+  scroll-behavior: smooth;
+
+  /* For Firefox */
+  overflow-y: scroll;
+  scrollbar-color: #5967af #261d54;
+  scrollbar-width: thin;
+}
+
+/* For all browsers except firefox */
+body::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: #261d54;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #5967af;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #7b8ad4;
+}
+
+/* ---------------------------------------------------- */
+
 .loader_wrapper {
-  width: 100vw;
+  width: 99vw;
   height: 100vh;
   display: flex;
   justify-content: center;
