--- a/src/global/components/display/components/social.module.css
+++ b/src/global/components/display/components/social.module.css
@@ -12,8 +12,7 @@
   border-right: 1px solid rgba(255, 255, 255, 0.07);
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   border-left: 1px solid rgba(255, 255, 255, 0.07);
-
-  background-color: #384773;
+  background-color: #34436d;
   /*
   background: linear-gradient(0deg,
       var(--dark-transparent-one) 50%,
