--- a/src/pages/home/components/filterByEvent.module.css
+++ b/src/pages/home/components/filterByEvent.module.css
@@ -46,7 +46,7 @@
     text-shadow:
       0 0 5px rgba(255, 255, 255, 1),
       0 0 10px rgba(255, 255, 255, 1),
-      0 0 15px rgba(0, 237, 250, 0.5),
+      0 0 15px rgb(0, 237, 250,0.5),
       0 0 20px rgba(0, 237, 250, 0.5),
       0 0 25px rgba(0, 237, 250, 0.5),
       0 0 30px rgba(0, 237, 250, 0.5),
