--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -23,7 +23,7 @@
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: inset -4px 4px 12px rgb(0, 0, 0, 1);
+  /*box-shadow: inset -4px 4px 12px rgb(0, 0, 0, 1);*/
 }
 
 .glass {
@@ -36,11 +36,10 @@
       rgba(0, 0, 0, 0.9)) 1 100%;
   position: relative;
   z-index: 1;
-  position: relative;
   background: linear-gradient(8deg,
-      rgba(255, 255, 255, 0) 20%,
-      rgba(255, 255, 255, 0.05) 50%,
-      rgba(255, 255, 255, 0.18) 80%);
+      rgba(255, 255, 255, 0.01) 20%,
+      rgba(255, 255, 255, 0.03) 50%,
+      rgba(255, 255, 255, 0.05) 80%);
   width: calc(100%-1px);
   height: 100%;
 }
