--- a/src/pages/home/components/latest/latest.module.css
+++ b/src/pages/home/components/latest/latest.module.css
@@ -1,18 +1,18 @@
 .event_wrapper {
   margin: 20px auto;
   display: flex;
-  width: 80%;
   color: rgba(255, 255, 255, 0.7);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding-top: 30px;
-  padding-bottom: 15px;
   cursor: pointer;
   transition: 100ms;
+  margin: 15px 30px 20px 30px;
+  padding: 35px 30px 35px 30px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .event_wrapper:hover {
   color: rgba(255, 255, 255, 1);
-  background-color: var(--white-transparent-one);
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 .icon_box {
